gitops/workloads/orders-api/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-api
  namespace: sog-nonprod-commerce
  labels:
    app.kubernetes.io/name: orders-api
    sog.io/domain: commerce

spec:

  selector:
    matchLabels:
      app.kubernetes.io/name: orders-api

  template:
    metadata:
      labels:
        app.kubernetes.io/name: orders-api
        sog.io/domain: commerce
        azure.workload.identity/use: "true"

    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault

      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app.kubernetes.io/name: orders-api

      serviceAccountName: orders-api

      containers:
        - name: orders-api
          image: sogplatformacr.azurecr.io/orders-api

          ports:
            - name: http
              containerPort: 8080

          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi

          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 3
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 3

          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 10001
            runAsGroup: 10001
            capabilities:
              drop:
                - ALL
