gitops/workloads/orders-api/base/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: orders-api
  namespace: sog-nonprod-commerce
  labels:
    app.kubernetes.io/name: orders-api
    sog.io/domain: commerce

spec:
  type: ClusterIP

  selector:
    app.kubernetes.io/name: orders-api

  ports:
    - name: http
      port: 80
      targetPort: 8080
