gitops/workloads/orders-api/base/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: orders-api
  namespace: sog-nonprod-commerce

spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: orders-api

  policyTypes:
    - Ingress

  ingress:
    # Allow application traffic originating inside the Commerce namespace.
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: sog-nonprod-commerce

    # Allow only Prometheus in the observability namespace to scrape metrics.
